--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web-development</title>
-</head>
+</head
+
 <body>
-    
+<h1> hello my name's idres</h1>    
 </body>
 </html>
