--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head
 
 <body>
-<h1> hello my name's idres</h1>    
+<h1> hello my name's idres</h1>   
+<div class="book"></div> 
 </body>
 </html>
