added sign up button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head
 
 <body>
-<h1> hello my name's idres</h1>   
+<h1> hello my name's idris</h1>   
 <div class="book"></div> 
+<button id="sign-up"></button>
+
 </body>
 </html>
