--- a/index.html
+++ b/index.html
@@ -3,40 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>second project</title>
+    <title><e-commerce</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="https://images.unsplash.com/photo-1625151430569-5abafefa1456?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=874&q=80"
-               class="background" alt="">
+      <div class="background-video">
+        <video autoplay muted loop>
+         <source src="https://vod-progressive.akamaized.net/exp=1691587817~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F4093%2F14%2F370467553%2F1536339698.mp4~hmac=684b149bade4a592c782f81729168dc3d590df8966cc469f5cb25121c922ba00/vimeo-prod-skyfire-std-us/01/4093/14/370467553/1536339698.mp4" type="video/mp4">
+         
+        </video> 
       </div>
 
+     <div class="background-with-overlay"></div>
+
+
+
+  
 
      <div class="menu-bar">
-        <div class="text"><b>welcome</b></div>
-           <ul>
-             <li class="active"><a href="#">HOME</a>
-               <ul class="sub-link">
-                  <li><a href="#">ABOUT</a></li> 
-                   <li><a href="#">SERVICE</a></li> 
-                   <li><a href="#">CLIENT</a></li> 
-                </ul>
-             </li>
-              <li><a href="#">HEAD OFFICE</a></li> 
-              <li><a href="#">LAGOS OFFICE</a></li> 
-              <li><a href="#">PORTHACOURT</a></li> 
+           <div class="text"><b>welcome</b></div>
+            <ul>
+                <li class="active"><a href="#">HOME</a>
+                   <ul class="sub-link">
+                     <li><a href="#">ABOUT</a></li> 
+                     <li><a href="#">SERVICE</a></li> 
+                     <li><a href="#">CLIENT</a></li> 
+                    </ul>
+                </li>
+              <li class="active"><a href="#">HEAD OFFICE</a>
+                    <ul class="sub-link-2">
+                      <li><a href="#">ABUJA</a></li>
+                      <li><a href="#">ABOUT</a></li>
+                      <li><a href="#">SERVICE</a></li>
+                      <li><a href="#">CLIENT</a></li>
+                    </ul> 
+                </li> 
+              <li class="active"><a href="#">LAGOS OFFICE</a>
+                    <ul class="sub-link-2">
+                      <li><a href="#">ABOUT</a></li>
+                      <li><a href="#">SERVICE</a></li>
+                      <li><a href="#">CLIENT</a></li>
+                    </ul> 
+                </li>
+                <li class="active"><a href="#">PORTHACOURT</a>
+                  <ul class="sub-link-3">
+                     <li><a href="#">ABOUT</a></li>
+                     <li><a href="#">SERVICE</a></li>
+                     <li><a href="#">CLIENT</a></li>
+                  </ul> 
 
 
-            </ul>
-    </div>
-
-    <!-- <div class="background-video">
-      <!-- <video autoplay muted loop> -->
-       <source src="https://vod-progressive.akamaized.net/exp=1691587817~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F4093%2F14%2F370467553%2F1536339698.mp4~hmac=684b149bade4a592c782f81729168dc3d590df8966cc469f5cb25121c922ba00/vimeo-prod-skyfire-std-us/01/4093/14/370467553/1536339698.mp4" type="video/mp4">
-       
-      </video> -->
-
-
-
-</body>
+                </li>
+     </div>
+    </body>
 </html>
